# haguichi

./: .bzrignore  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  Haguichi.csproj  Haguichi.sln  INSTALL  INSTALL.md  README.md  com.github.ztefn.haguichi.json  description-pak  haguichi-autostart.desktop  haguichi-menu.desktop  haguichi.avprj  haguichi.in  meson.build  meson.options  meson_options.txt  postinstall-pak
data/: CMakeLists.txt  com.github.ztefn.haguichi-autostart.desktop.in  com.github.ztefn.haguichi.appdata.xml.in  com.github.ztefn.haguichi.appdata.xml.in.in  com.github.ztefn.haguichi.autostart.desktop.in.in  com.github.ztefn.haguichi.desktop.in  com.github.ztefn.haguichi.desktop.in.in  com.github.ztefn.haguichi.gresource.xml  com.github.ztefn.haguichi.gschema.xml  com.github.ztefn.haguichi.metainfo.xml.in.in  haguichi-autostart.desktop  haguichi-autostart.desktop.in.in  haguichi-menu.desktop.in.in  haguichi.appdata.xml  haguichi.desktop  haguichi.gschema.xml  haguichi.metainfo.xml.in.in  meson.build  org.haguichi.gschema.xml
data/icons/: Yaru  meson.build
data/icons/Adwaita/scalable/: CMakeLists.txt
data/icons/hicolor/16x16/: CMakeLists.txt
data/icons/hicolor/22x22/: CMakeLists.txt
data/icons/hicolor/24x24/: CMakeLists.txt
data/icons/hicolor/256x256/: CMakeLists.txt
data/icons/hicolor/32x32/: CMakeLists.txt
data/icons/hicolor/48x48/: CMakeLists.txt
data/icons/hicolor/512x512/: CMakeLists.txt
data/icons/hicolor/scalable/: CMakeLists.txt
data/icons/ubuntu-mono-dark/22x22/: CMakeLists.txt
data/icons/ubuntu-mono-dark/24x24/: CMakeLists.txt
data/icons/ubuntu-mono-light/22x22/: CMakeLists.txt
data/icons/ubuntu-mono-light/24x24/: CMakeLists.txt
data/stylesheets/: adwaita-dark.css  adwaita.css  base.css  default.css  elementary-base.css  elementary-dark.css  elementary.css  mint.css  style-dark.css  style-hc.css  style.css  yaru.css
data/ui/: network-list.ui  preferences.ui  shortcuts-dialog.ui  shortcuts-window.ui  sidebar.ui  window.ui
data/ui/dialogs/: add-edit-command.ui  attach.ui  change-access.ui  change-password.ui  join-create-network.ui
data/ui/menus/: member-menu.ui  network-list-menu.ui  network-menu.ui
data/ui/widgets/: command-entry-row.ui  command-variable-box.ui  command-variable-button.ui  commands-editor-row.ui  commands-editor.ui  network-list-item.ui  sidebar-page.ui  sidebar-row.ui
debian/: changelog  control  postinst  postrm  rules
flatpak/: README.md  com.github.ztefn.haguichi.json  dbus-sharp-glib-no-system.patch  gconf-change-service-name.patch  mono-sysmacros-header.patch  notify-sharp-compiler-fix.patch
locale/ast/LC_MESSAGES/: haguichi.mo
locale/bg/LC_MESSAGES/: haguichi.mo
locale/cs/LC_MESSAGES/: haguichi.mo
locale/de/LC_MESSAGES/: haguichi.mo
locale/es/LC_MESSAGES/: haguichi.mo
locale/fr/LC_MESSAGES/: haguichi.mo
locale/id/LC_MESSAGES/: haguichi.mo
locale/it/LC_MESSAGES/: haguichi.mo
locale/ja/LC_MESSAGES/: haguichi.mo
locale/kk/LC_MESSAGES/: haguichi.mo
locale/nl/LC_MESSAGES/: haguichi.mo
locale/pl/LC_MESSAGES/: haguichi.mo
locale/pt_BR/LC_MESSAGES/: haguichi.mo
locale/ru/LC_MESSAGES/: haguichi.mo
locale/sk/LC_MESSAGES/: haguichi.mo
locale/sv/LC_MESSAGES/: haguichi.mo
locale/tr/LC_MESSAGES/: haguichi.mo
locale/uk/LC_MESSAGES/: haguichi.mo
po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  README.md  ast.po  bg.po  cs.po  de.po  es.po  fi.po  fr.po  generate-catalogs.pl  haguichi.pot  hu.po  id.po  insert-comments.pl  it.po  ja.po  kk.po  lt.po  meson.build  messages.pot  nl.po  pl.po  po.mdproj  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tr.po  uk.po
src/: CMakeLists.txt  Command.cs  CommandsEditor.cs  Connection.cs  Controller.cs  Debug.cs  Defines.cs.in  GlobalEvents.cs  Hamachi.cs  Main.cs  MainWindow.cs  Member.cs  Network.cs  NetworkView.cs  Notify.cs  PanelIcon.cs  Platform.cs  Session.cs  Status.cs  TextStrings.cs  Utilities.cs  application.vala  bubble.vala  command.vala  config.vala.in  connection.vala  controller.vala  custom-command.vala  debug.vala  global-actions.vala  global-events.vala  haguichi.vala  hamachi.vala  headerbar.vala  indicator-menu.vala  indicator-wingpanel.vala  indicator.vala  inhibitor.vala  key.vala  member-event.vala  (+14 more)
src/Config/: Client.cs  Key.cs  Settings.cs
src/Dialogs/: About.cs  AddEditCommand.cs  Attach.cs  Base.cs  ChangeNick.cs  ChangePassword.cs  ChooseIcon.cs  Confirm.cs  Information.cs  JoinCreate.cs  Message.cs  NotConfigured.cs  NotInstalled.cs  Preferences.cs  RunTunCfg.cs  SendRequest.cs
src/Menus/: CommandMenuItem.cs  MemberMenu.cs  Menubar.cs  NetworkMenu.cs  Quick.cs  QuickMenu.cs
src/Widgets/: GroupBox.cs  IndentHBox.cs  MessageBar.cs  SpaceBox.cs  WrapLabel.cs
src/Windows/: Preferences.cs
src/dialogs/: about.vala  add-edit-command.vala  attach.vala  base.vala  change-access.vala  change-nick.vala  change-password.vala  confirm.vala  join-create-network.vala  message.vala
src/menus/: command-menu-item.vala  join-create-menu.vala  member-menu.vala  network-menu.vala
src/widgets/: cell-renderer-node.vala  command-button.vala  command-entry-row.vala  command-variable-box.vala  command-variable-button.vala  commands-editor-row.vala  commands-editor.vala  group-box.vala  message-bar.vala  message-box.vala  preferences-box.vala  preferences-label.vala  preferences-switch.vala  sidebar-button.vala  sidebar-entry.vala  sidebar-label.vala  sidebar-page.vala  sidebar-row.vala  throbber.vala
vapi/: config.vapi
